	* aoutx.h (NAME(aout,set_section_contents)): Double check that the 	caller is writing to a valid section. PR 5996 cleanup.